[project]
name = "chain_harvester"
description = "A Python library designed to interface with various blockchain networks, enabling the retrieval of data."
authors = [
    {name="0xCommanderKeen", email="f91289621+0xCommanderKeen@users.noreply.github.com"},
    {name="tsifrer", email="3967564+tsifrer@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]
dependencies = [
    "aiobotocore>=2.25.2",
    "aiofiles>=25.1.0",
    "environs>=14.5.0",
    "eth-abi>=5.2.0",
    "multiproof>=0.1.10",
    "requests>=2.32.5",
    "web3>=7.14.0",
]

[dependency-groups]
dev = [
    "moto>=5.1.16",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[project.urls]
homepage = "https://github.com/blockanalitica/chain-harvester"
repository = "https://github.com/blockanalitica/chain-harvester.git"
documentation = "https://github.com/blockanalitica/chain-harvester"
issues = "https://github.com/blockanalitica/chain-harvester/issues"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
extend-select = [
    "YTT", # flake8-2020
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "TID", # flake8-tidy-imports
    "I", # isort
    "C90", # mccabe
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "PGH", # pygrep-hooks
    "UP", # pyupgrade
    "RUF", # ruff
    "TRY", # tryceratops
    "N", # pep8-naming
    "PERF", # Perflint
]
ignore = [
    "C901",
    "COM812",
    "E731",
    "PERF401",
    "PYI024",
    "RUF012",
    "S108",
    "S608",
    "SIM108",
    "TRY002",
    "TRY003",
    "TRY300",
    "S105",
    "SIM110",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]
"integration_tests/**/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["chain_harvester"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests" = { msg = "Do not use 'requests'; use an async client (e.g. aiohttp) instead." }


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/chain_harvester/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chain_harvester"]

[tool.semantic_release]
commit_message = "chore(release): {version}"
version_variables = ["src/chain_harvester/__init__.py:__version__"]
allow_zero_version = true
