[project]
name = "chain_harvester"
version = "0.0.1"
description = "A Python library designed to interface with various blockchain networks, enabling the retrieval of data."
authors = [{ name = "0xCommanderKeen", email = "f91289621+0xCommanderKeen@users.noreply.github.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "web3>=7.7.0,<8",
    "requests>=2.31.0,<3",
    "eth-abi>=5.1.0,<6",
    "multiproof>=0.1.10,<0.2",
    "boto3>=1.40.33,<2",
    "aiofiles>=25.1.0",
    "aiobotocore>=3.1.1",
    "environs>=14.5.0",
]

[project.urls]
Repository = "https://github.com/blockanalitica/chain-harvester"
Documentation = "https://blockanalitica.github.io/chain-harvester/"

[dependency-groups]
decv = [
    "pytest-asyncio>=1.3.0",
]
dev = [
    "pytest>=8.3.4,<9",
    "pre-commit>=4.0.1,<5",
    "tox>=4.6.4,<5",
    "python-dotenv>=1.0.0,<2",
    "ruff>=0.8.3,<0.9",
    "ipython>=8.30.0,<9",
    "moto>=5.1.12,<6",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["chain_harvester"]
module-root = "src"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "T201",
]
ignore = [
    # DoNotAssignLambda
    "E731",
    "TRY300",
    "TRY003",
    "RUF012",
    "S108",
    "TRY002",
    "C901",
    "UP038",
    "SIM108",
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"integration_tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["chain_harvester"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
