[project]
name = "chain_harvester"
version = "0.0.1"
description = "A Python library designed to interface with various blockchain networks, enabling the retrieval of data."
authors = [{ name = "0xCommanderKeen", email = "f91289621+0xCommanderKeen@users.noreply.github.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "web3>=7.14.1,<8",
    "requests>=2.32.5,<3",
    "eth-abi>=5.2.0,<6",
    "multiproof>=0.1.10,<0.2",
    "boto3>=1.42.0,<2",
    "aiofiles>=25.1.0",
    "aiobotocore>=3.3.0",
    "environs>=14.6.0",
    "hypersync>=1.0.0",
    "hexbytes>=1.3.1",
]

[project.urls]
Repository = "https://github.com/blockanalitica/chain-harvester"
Documentation = "https://blockanalitica.github.io/chain-harvester/"

[dependency-groups]
decv = [
    "pytest-asyncio>=1.3.0",
]
dev = [
    "pytest>=8.3.4,<9",
    "pre-commit>=4.0.1,<5",
    "tox>=4.6.4,<5",
    "python-dotenv>=1.0.0,<2",
    "ruff>=0.8.3,<0.9",
    "ipython>=8.30.0,<9",
    "moto>=5.1.12,<6",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["chain_harvester", "chain_harvester_async"]
module-root = "src"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "YTT", # flake8-2020
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "DTZ", # flake8-datetimez
    "I", # isort
    "C90", # mccabe
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "PGH", # pygrep-hooks
    "UP", # pyupgrade
    "RUF", # ruff
    "TRY", # tryceratops
    "N", # pep8-naming
    "PERF", # Perflint
    "TID", # flake8-tidy-imports
]
ignore = [
    "C901",
    "COM812",
    "E731",
    "PERF401",
    "PYI024",
    "RUF012",
    "S108",
    "S608",
    "SIM108",
    "TRY002",
    "TRY003",
    "TRY300",
    "S105",
    "SIM110",
    "N818",
    "PT001",
    "PT023",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"integration_tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["chain_harvester", "chain_harvester_async"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
